fixed full-screen, origin link, thumbnail sizing, sidebar scrolling, some formatting on mobile, swipe-up to get rid of the titlebar, scrolling info in portrait.

--- a/PerpetualShred/Scripts/css/mobile/shredplayer_mobile.css
+++ b/PerpetualShred/Scripts/css/mobile/shredplayer_mobile.css
@@ -31,11 +31,10 @@
         width: 100%;
         height: 100%;
         z-index: -1;
-        pointer-events: none;
         overflow: hidden;
     }
 
-    .video-background [data-vimeo-initialized="true"] iframe {
+    #shredplayer {
         width: 100vw;
         height: 56.25vw; /* Given a 16:9 aspect ratio, 9/16*100 = 56.25 */
         min-height: 100vh;
@@ -43,8 +42,7 @@
         position: absolute;
         top: 50%;
         left: 50%;
-        -webkit-transform: translate(-50%, -50%);
-        -ms-transform: translate(-50%, -50%);
         transform: translate(-50%, -50%);
     }
 }
+
