--- a/PerpetualShred/Scripts/css/shredburger.css
+++ b/PerpetualShred/Scripts/css/shredburger.css
@@ -1,5 +1,5 @@
 .hamburger {
-    padding: 15px 15px;
+    padding: 10px 10px;
     display: inline-block;
     cursor: pointer;
     -webkit-transition-property: opacity, -webkit-filter;
@@ -21,8 +21,8 @@
     margin: 0;
     overflow: visible;
     position: absolute;
-    top: 24px;
-    right: 15px;
+    top: 19px;
+    right: 10px;
     z-index: 11;
 }
 
