--- a/PerpetualShred/Scripts/css/shredvidlist.css
+++ b/PerpetualShred/Scripts/css/shredvidlist.css
@@ -53,7 +53,7 @@
 }
 
 .vidThumbContainer img {
-    height: 116px;
+    width:160px;
     align-self: center;
     padding-top: 5px;
     padding-left: 5px;
